[tool.poetry]
name = "tap-greenhouse"
version = "0.3.3"
description = "`tap-greenhouse` is a Singer tap for greenhouse, built with the Meltano Singer SDK, forked from https://github.com/rawwar/tap-greenhouse."
readme = "README.md"
authors = ["kalyan reddy dlouseiro"]
keywords = [
    "ELT",
    "greenhouse",
]
license = "Apache 2.0"
packages = [
    { include = "tap_greenhouse" },
]

[tool.poetry.dependencies]
python = "<3.12,>=3.8.0"
singer-sdk = { version="^0.37.0" }
fs-s3fs = { version = "^1.1.1", optional = true }
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
singer-sdk = { version="^0.37.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_greenhouse"]
target-version = "py38"
ignore-init-module-imports = true

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_greenhouse"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-greenhouse = 'tap_greenhouse.tap:Tapgreenhouse.cli'
